--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@expo/webpack-config": "^19.0.0",
     "@react-native-community/slider": "^4.4.3",
     "expo": "~49.0.13",
+    "expo-av": "~13.4.1",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
-    "react-native-track-player": "^3.2.0",
+    "react-native-track-player": "^4.0.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6"
   },
