--- a/package.json
+++ b/package.json
@@ -26,8 +26,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-native/eslint-config": "^0.74.0",
     "@types/react": "~18.2.14",
     "@types/react-native-vector-icons": "^6.4.15",
+    "eslint": "^8.55.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^5.0.0-canary-0cdfef19b-20231211",
+    "eslint-plugin-react-native": "^4.1.0",
+    "prettier": "^3.1.1",
     "typescript": "^5.1.3"
   },
   "private": true
