--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@types/react-native-vector-icons": "^6.4.15",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^5.0.0-canary-0cdfef19b-20231211",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-native": "^4.1.0",
     "prettier": "^3.1.1",
     "typescript": "^5.1.3"
